kube/html-frontend.dply.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: html-frontend
  name: html-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: html-frontend
  template:
    metadata:
      labels:
        run: html-frontend
    spec:
      containers:
      - image: html-frontend:1.0
        name: html-frontend
        ports:
        - containerPort: 80
          protocol: TCP
