kube/java-consumer.dply.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: java-consumer
  app: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: java-consumer
      image: java-consumer:1.0
