kube/rabbit.dply.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: queue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: rabbit
        image: rabbitmq:3.6.6-management
        ports:
        - containerPort: 15672
        - containerPort: 5672
