kube/html-frontend.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: html-frontend
  labels:
    app: demo
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
     app: demo
