kube/rabbit.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    app: queue
spec:
 ports:
 - port: 15672 
   protocol: TCP
   name: management
 - port: 5672 
   protocol: TCP
   name: queue
 selector:
   app: queue
