kube/status-api.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: status-api
  labels:
    app: demo
 spec:
   ports:
   - port: 5000 
     protocol: TCP
   selector:
     app: demo
