kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: html-frontend
          servicePort: 80
  - host: status.demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: status-api
          servicePort: 5000
